src/objects/TR1__SF_Purchase_Order__c.object
<CustomObject>
    <description>This Object Created for the Quick Books Integration Requested By InterWeave</description>
    <fields>
        <fullName>TR1__Billing_Company_Name__c</fullName>
        <label>Billing Company Name</label>
        <length>210</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Billing_Company_Street__c</fullName>
        <label>Billing Company Street</label>
        <length>210</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>210</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Billing_FirstName__c</fullName>
        <label>Billing FirstName</label>
        <length>210</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Billing_LastName__c</fullName>
        <label>Billing LastName</label>
        <length>210</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Billing_PhoneNumber__c</fullName>
        <label>Billing PhoneNumber</label>
        <length>210</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Billing_Postal_Code__c</fullName>
        <label>Billing Postal Code</label>
        <length>210</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Billing_State__c</fullName>
        <label>Billing State</label>
        <length>210</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Billing_Status__c</fullName>
        <label>Billing Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Estimate_Number__c</fullName>
        <label>Estimate Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>11</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TR1__Purchase_Order_Number__c</fullName>
        <label>Purchase Order Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Sales_Order_Number__c</fullName>
        <label>Sales Order Number</label>
        <length>11</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TR1__Sales_Receipt_Number__c</fullName>
        <label>Sales Receipt Number</label>
        <length>11</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TR1__Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>210</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Shipping_Company_Name__c</fullName>
        <label>Shipping Company Name</label>
        <length>210</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Shipping_Company_Street__c</fullName>
        <label>Shipping Company Street</label>
        <length>210</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>210</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Shipping_FirstName__c</fullName>
        <label>Shipping FirstName</label>
        <length>210</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Shipping_LastName__c</fullName>
        <label>Shipping LastName</label>
        <length>210</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Shipping_PhoneNumber__c</fullName>
        <label>Shipping PhoneNumber</label>
        <length>210</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Shipping_Postal_Code__c</fullName>
        <label>Shipping Postal Code</label>
        <length>210</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Shipping_State__c</fullName>
        <label>Shipping State</label>
        <length>210</length>
        <type>Text</type>
    </fields>
    <label>SF Purchase Order</label>
    <nameField>
        <displayFormat>PO-{0000000000}</displayFormat>
        <label>SF Purchase Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SF Purchase Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>